# AttentionIsAllYouNeed

./: .gitignore  README.md  evaluate.py  pyproject.toml  requirements.txt  train.py
configs/: base.yaml  base_small.yaml
src/: __init__.py
src/data/: __init__.py  dataset.py  tokenizer.py
src/evaluation/: __init__.py  beam_search.py  visualize.py
src/model/: __init__.py  attention.py  decoder.py  encoder.py  feed_forward.py  positional_encoding.py  transformer.py
src/training/: __init__.py  loss.py  trainer.py  warmup_experiment.py
tests/: test_attention.py  test_beam_search.py  test_encoder_decoder.py  test_positional_encoding.py  test_training.py  test_transformer.py
